@@ -2,9 +2,10 @@
 
 v0.0.3alpha (unreleased)
 
-  * === Now works on Linux (rolled back some libraries for maximum compatibility)
+  * === Now works on Linux (rolled back some libraries for maximum compatibility).
 
-  * Key settings in options.
+  * Audio settings in options.
+  * Controls (keys/gamepad) settings in options.
   * Creatures can be knocked down if hit with a sufficiently large thrown object.
   * Added a disaster to the forest/dryad level (trees awaken).
   * Replaced game text overlay with a graphical overlay.
